--- a/basic.html
+++ b/basic.html
@@ -6,7 +6,7 @@
     <title>Document</title>
     <style>
         th{
-            height: 8px;0px;background-color:blueviolet;text-align: center;
+            height: 80px;background-color:blueviolet;text-align: center;
         }
 
         
